fix: profile button on mobile

--- a/src/components/Header/ProfileButton/ProfileButton.module.scss
+++ b/src/components/Header/ProfileButton/ProfileButton.module.scss
@@ -3,6 +3,10 @@
   display: flex;
   align-items: center;
 
+  @media screen and (max-width: 768px) {
+    justify-content: flex-end;
+  }
+
   &:hover .dropdown,
   &:focus-within .dropdown {
     visibility: visible;
